Feature: add validation to dtos and controllers, add custom role validator
