# src/main/java/com/example/bankcards/entity/User.java
@@ -1,6 +1,5 @@
 package com.example.bankcards.entity;
 
-import io.swagger.v3.oas.annotations.media.Schema;
 import jakarta.persistence.*;
 import lombok.*;
 
@@ -13,25 +12,20 @@ import java.util.Objects;
 @Builder(toBuilder = true)
 @AllArgsConstructor
 @NoArgsConstructor
-@Schema(description = "Сущность пользователя")
 public class User {
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     @Column
-    @Schema(description = "Уникальный идентификатор", example = "1", accessMode = Schema.AccessMode.READ_ONLY)
     private Long id;
 
     @Column(unique = true)
-    @Schema(description = "Имя пользователя", example = "admin_user")
     private String username;
 
     @Column
-    @Schema(description = "Пароль", example = "password")
     private String password;
 
     @Enumerated(EnumType.STRING)
     @Column
-    @Schema(description = "Роль пользователя", example = "ROLE_USER")
     private UserRole role;
 
     public User(String username, String password) {
